<resources>
    <string name="app_name">YIC</string>
    <string name="whyyic">whyYIC</string>
    <string name="what_is_yic">What is YIC?</string>
    <string name="speakers_and_mentors">Speakers and Mentors</string>
    <string name="why_yic">Why YIC?</string>
    <string name="apply_for_yic_2017">Apply for YIC 2017</string>
    <string name="gallery">Gallery</string>
    <string name="human_circle">Human Circle</string>
    <string name="welcome">Welcome</string>
    <string name="do_what_you_love">DO WHAT YOU LOVE</string>
    <string name="it_is_an_opportunity_for_the_selected_youth_to_learn_grow_and_connect_with_the_top_industry_leaders_best_selling_authors_incredible_speakers_and_game_changing_entrepreneurs_to_gain_leverage_to_grow_their_network_and_career_selected_participants_meet_incredible_people_and_understand_how_to_turn_their_passion_into_a_successful_career_and_get_paid">It is an opportunity for the selected youth to learn, grow and connect with the top industry leaders, best-selling authors, incredible speakers and game-changing entrepreneurs to gain leverage to grow their network and career. Selected participants meet incredible people and understand how to turn their passion into a successful career and get paid.</string>
    <string name="yic_is_an_opportunity_to_discover_and_explore_what_you_love_doing_by_taking_up_an_incredible_challenge_and_connecting_with_the_best_mentors_and_career_opportunities">YIC is an opportunity to discover and explore what you love doing by taking up an incredible challenge and connecting with the best mentors and career opportunities.</string>
    <string name="young_india_challenge_yic_is_a_two_day_experiential_national_event_for_the_top_creative_young_minds_to_engage_in_innovative_programs_that_will_broaden_their_mindset_and_move_them_closer_to_what_they_love_doing_participants_are_selected_from_across_the_country">Young India Challenge (YIC) is a two day experiential national event for the top creative young minds to engage in innovative programs that will broaden their mindset and move them closer to what they love doing. Participants are selected from across the country.</string>
    <string name="next">Next</string>
    <string name="reasons">reasons</string>
    <string name="kamal_is_an_experience_design_professional_and_is_passionate_about_driving_the_dowhatyoulove_movement_globally_and_impact_the_young_generation_to_create_an_impact_he_has_delivered_entrepreneurship_leadership_development_programs_across_europe_and_asia"><![CDATA[Kamal is an experience design professional and is passionate about driving the #DoWhatYouLove movement globally and impact the young generation to create an impact. He has delivered entrepreneurship & leadership development programs across Europe and Asia.]]></string>
    <string name="co_founder_and_chief_operating_officer">Co-founder and Chief Operating Officer</string>
    <string name="founder_chief_happiness_officer"><![CDATA[Founder & Chief Happiness Officer]]></string>
    <string name="humans_of_human_circle">Humans of Human Circle</string>
    <string name="kamal_seth">Kamal Seth</string>
    <string name="our_story">Our Story</string>
    <string name="wioleta_burdzy_seth">Wioleta Burdzy Seth</string>
    <string name="wioleta_delivers_personal_growth_leadership_and_skill_development_workshops_and_life_coaching_to_a_diverse_set_of_audience_previously_she_was_a_specialist_in_human_resource_areas_like_training_recruitment_and_learning_and_development_she_has_worked_in_several_multi_national_companies_like_statoil_and_inditex_zara_etc">Wioleta delivers personal growth, leadership and skill development workshops and life coaching to a diverse set of audience. Previously she was a specialist in human resource areas like training, recruitment and learning and development. She has worked in several multi-national companies like Statoil and INDITEX (Zara etc).</string>
    <string name="working_in_multinational_corporations_made_us_realize_that_some_of_our_colleagues_did_not_love_their_jobs_bosses_clients_and_they_were_generally_not_content_they_were_complaining_and_pessimistic_many_times_could_not_wait_for_fridays_and_dreaded_monday_mornings_in_some_close_conversations_many_of_them_shared_with_us_that_if_they_had_a_second_chance_they_would_do_something_different_in_life_they_would_choose_a_life_and_career_of_passion_because_they_realized_that_money_and_a_stable_job_alone_do_not_bring_happiness_what_brings_that_satisfaction_and_fulfilment_is_doing_things_we_love_creating_positive_impact_and_sharing_our_gifts_and_talents_with_others_so_we_quit_our_jobs_and_here_we_are_we_started_human_circle_with_a_single_minded_determination_to_change_the_mindset_of_people_to_do_what_they_love_create_an_impactful_career_and_make_the_world_a_better_place_with_their_passion">Working in multinational corporations made us realize that some of our colleagues did not love their jobs/bosses/clients and they were generally not content. They were complaining and pessimistic many times, could not wait for Fridays and dreaded Monday mornings. In some close conversations, many of them shared with us that if they had a second chance….. they would do something different in life. They would choose a life and career of passion because they realized that money and a stable job alone do not bring happiness. What brings that satisfaction and fulfilment is doing things we love, creating positive impact and sharing our gifts and talents with others. So we quit our jobs and here we are: We started Human Circle with a single minded determination to change the mindset of people to do what they love, create an impactful career and make the world a better place with their passion.</string>
</resources>
