<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:contentDescription="@string/welcome"
        app:srcCompat="@drawable/qsc" />

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.jobs.datesheet.MainActivity"
        tools:layout_width="match_parent">

        <Button
            android:id="@+id/speaker"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="0"
            android:layout_columnWeight="2"
            android:layout_gravity="fill"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_row="2"
            android:layout_rowWeight="2"
            android:alpha="1"
            android:background="?android:attr/colorFocusedHighlight"
            android:drawableTop="@drawable/speaker"
            android:fontFamily="casual"
            android:gravity="top|center"
            android:onClick="click"
            android:text="@string/speakers_and_mentors"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/gal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:layout_columnWeight="2"
            android:layout_gravity="fill"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_row="1"
            android:layout_rowWeight="2"
            android:alpha="1"
            android:background="@android:color/holo_orange_dark"
            android:drawableTop="@drawable/gallery"
            android:fontFamily="casual"
            android:gravity="top|center"
            android:onClick="click"
            android:text="@string/gallery"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/apply"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="0"
            android:layout_columnWeight="2"
            android:layout_gravity="fill"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_row="1"
            android:layout_rowWeight="2"
            android:alpha="1"
            android:background="@android:color/holo_blue_dark"
            android:drawableTop="@drawable/apply"
            android:fontFamily="casual"
            android:gravity="top|center"
            android:onClick="click"
            android:text="@string/apply_for_yic_2017"
            android:textColor="@android:color/background_light"
            android:textSize="23sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/why"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:layout_columnWeight="2"
            android:layout_gravity="fill"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_row="0"
            android:layout_rowWeight="2"
            android:alpha="1"
            android:background="@android:color/holo_green_light"
            android:drawableTop="@drawable/whyyic"
            android:fontFamily="casual"
            android:gravity="top|center"
            android:onClick="click"
            android:text="@string/why_yic"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/what"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="0"
            android:layout_columnWeight="2"
            android:layout_gravity="fill"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_row="0"
            android:layout_rowWeight="2"
            android:alpha="1"
            android:background="@android:color/holo_red_light"
            android:drawableTop="@drawable/einstein"
            android:elevation="0dp"
            android:fontFamily="casual"
            android:gravity="top|center"
            android:onClick="click"
            android:padding="0dp"
            android:text="@string/what_is_yic"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/org"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:layout_columnWeight="2"
            android:layout_gravity="fill"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_row="2"
            android:layout_rowWeight="2"
            android:alpha="1"
            android:background="@color/colorPrimary"
            android:fontFamily="casual"
            android:gravity="center"
            android:onClick="click"
            android:text="@string/human_circle"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="22sp"
            android:textStyle="bold" />

    </GridLayout>

</LinearLayout>
